Particle Hair - Density texture bug #39708

Closed
opened 2014-04-13 22:22:13 +02:00 by Pawel Swierczynski · 16 comments

System Information
WIn7 x64
nVidia GF GTX 660

Blender Version
Broken: 2.7
Worked: 2.6

Short description of error

When I connect a texture to Particle/Hair Density parameter every time I click some, any button in Texture tab (or texture slot in PArticle tab) the position of hair strands changes.

Exact steps for others to reproduce the error

  1. Create any mesh (box will be fine), and a small plane which will take place of a feather
  2. Create Particle System, change:
  • from Emiter to Hair (Hair Length: 0.3 will do)
  • Render --> Object --> Dupli Object: the plane mesh you created
  • Textures --> click New
  • having it selected go to Textures tab, to Influence and click Density.

Attached blend file has it all set up.

Particle_hair_Density_bug.blend

**System Information** WIn7 x64 nVidia GF GTX 660 **Blender Version** Broken: 2.7 Worked: 2.6 **Short description of error** When I connect a texture to Particle/Hair Density parameter every time I click some, any button in Texture tab (or texture slot in PArticle tab) the position of hair strands changes. **Exact steps for others to reproduce the error** 1. Create any mesh (box will be fine), and a small plane which will take place of a feather 2. Create Particle System, change: - from Emiter to Hair (Hair Length: 0.3 will do) - Render --> Object --> Dupli Object: the plane mesh you created - Textures --> click New - having it selected go to Textures tab, to Influence and click Density. Attached blend file has it all set up. [Particle_hair_Density_bug.blend](https://archive.blender.org/developer/F84777/Particle_hair_Density_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PawelSwierczynski

Added subscriber: @PawelSwierczynski

The screenshot below shows what`s happening with hair

blender_nuts.jpg

The screenshot below shows what`s happening with hair ![blender_nuts.jpg](https://archive.blender.org/developer/F84778/blender_nuts.jpg)
Lukas Tönne was assigned by Bastien Montagne 2014-04-13 23:03:14 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Lukas, in case you feel like crunching hairy issues again… :/

Lukas, in case you feel like crunching hairy issues again… :/

Added subscribers: @ideasman42, @BartekMoniewski

Added subscribers: @ideasman42, @BartekMoniewski

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

I am not sure I understand the problem...As far as I have seen, textures -should- update the particle when tweaked. I just did a commit that avoids updating when the active texture is changed in the particle tab but I don't think changing the texture settings otherwise should not update.. Do I miss something here?

What I have seen however is that changing between textures in the particle tab strangely only updates half the sphere each time.

I am not sure I understand the problem...As far as I have seen, textures -should- update the particle when tweaked. I just did a commit that avoids updating when the active texture is changed in the particle tab but I don't think changing the texture settings otherwise should not update.. Do I miss something here? What I *have* seen however is that changing between textures in the particle tab strangely only updates half the sphere each time.

The problem here is that it updates itself when you click literally anything not necessarily involving texture.
And even if it should, the change shouldn`t be so dramatic, unpredictable, etc.

Look at the screenshots Ive uploaded. The changes didnt happen because I changed "density". I clicked some irrelevant checkbox somewhere. Also the density map covers almost the whole head where you can see there are totally bald areas, not to mention weird, changing amounts of feathers.

The problem here is that it updates itself when you click literally **anything** not necessarily involving texture. And even if it should, the change shouldn`t be so dramatic, unpredictable, etc. Look at the screenshots I`ve uploaded. The changes didn`t happen because I changed "density". I clicked some irrelevant checkbox somewhere. Also the density map covers almost the whole head where you can see there are totally bald areas, not to mention weird, changing amounts of feathers.

I can see the problem in the screenshot but it would help if the actual test file had a similar behaviour (which it doesn't, each "update" does the whole sphere). I can see how it would be nice for updates to only refresh the relevant areas though.

I can see the problem in the screenshot but it would help if the actual test file had a similar behaviour (which it doesn't, each "update" does the whole sphere). I can see how it would be nice for updates to only refresh the relevant areas though.

Added subscriber: @bosman

Added subscriber: @bosman

@Psy-Fi the problem is when influence=>density (texture) is ticked. Every time you click for example influence=>general=>time or some other texture/particle system settings like "hair lenght" (even without change the value) it exactly looks like particle system changes seeds value (seed is still "0", but hair change their location).

When influence=>density (texture) is unticked everything is ok.

@Psy-Fi the problem is when influence=>density (texture) is ticked. Every time you click for example influence=>general=>time or some other texture/particle system settings like "hair lenght" (even without change the value) it exactly looks like particle system changes seeds value (seed is still "0", but hair change their location). When influence=>density (texture) is unticked everything is ok.
Lukas Tönne removed their assignment 2014-06-06 13:03:57 +02:00
Antonis Ryakiotakis was assigned by Lukas Tönne 2014-06-06 13:03:57 +02:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

@Psy-Fi: Assigning to you in case you have an idea. But imo we can close as TODO, spending time on these issues seems like a waste.

@Psy-Fi: Assigning to you in case you have an idea. But imo we can close as TODO, spending time on these issues seems like a waste.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Yes, this looks more like a todo actually, it requires being able to internally separate which slots should get full recalculation and which should not.

Yes, this looks more like a todo actually, it requires being able to internally separate which slots should get full recalculation and which should not.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39708
No description provided.