Fix part of T39708, don't overupdate particles when changine active particle texture slot